{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 314,
  "lineage": "7b65c37c-0047-46d9-463d-100caddf77b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gpu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0790368b78dc061cb",
            "arn": "arn:aws:ec2:us-east-1:851725448170:instance/i-0c55601bd4a554991",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c55601bd4a554991",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g4dn.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:64ab:ab01:31aa:18:1812:6142"
            ],
            "key_name": "bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0940be3b6a63c5040",
            "private_dns": "ip-10-0-3-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.22",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-001848f253277952c",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06ac0960b4343537e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002c3431c8f6842e7",
            "tags": {
              "Name": "cgdubp_vpc_GPU_Instance"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_GPU_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ac0960b4343537e"
            ]
          },
          "dependencies": [
            "data.aws_ami.windows",
            "module.Network.aws_security_group.app_sg",
            "module.Network.aws_subnet.private_app_subnet1",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:security-group/sg-09f544d6079cd138b",
            "description": "Security group for CGdubP RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f544d6079cd138b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [
                  "2600:8806:a829:9300:ad16:4d10:9d79:d79c/128"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "851725448170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6da9504d54003bd",
            "arn": "arn:aws:ec2:us-east-1:851725448170:elastic-ip/eipalloc-0b6da9504d54003bd",
            "association_id": "eipassoc-0b4d4b63547b5687b",
            "domain": "vpc",
            "id": "eipalloc-0b6da9504d54003bd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e06da9145d6bdbb",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-100-28-180-117.compute-1.amazonaws.com",
            "public_ip": "100.28.180.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cgdubp_vpc_NAT_EIP"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_NAT_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:internet-gateway/igw-0ede2837428dfe7b3",
            "id": "igw-0ede2837428dfe7b3",
            "owner_id": "851725448170",
            "tags": {
              "Name": "cgdubp_vpc_Internet_Gateway"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_Internet_Gateway"
            },
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6da9504d54003bd",
            "association_id": "eipassoc-0b4d4b63547b5687b",
            "connectivity_type": "public",
            "id": "nat-05fad8f46374f1a30",
            "network_interface_id": "eni-01e06da9145d6bdbb",
            "private_ip": "10.0.1.93",
            "public_ip": "100.28.180.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b628f1d53caa6dc",
            "tags": {
              "Name": "cgdubp_vpc_NAT_Gateway"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_NAT_Gateway"
            }
          },
          "dependencies": [
            "module.Network.aws_eip.nat_eip",
            "module.Network.aws_subnet.public_subnet1",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_ipv6_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ede2837428dfe7b3",
            "id": "r-rtb-096d1fa4a8913ffd92750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096d1fa4a8913ffd9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.internet_gateway",
            "module.Network.aws_route_table.private_route_table",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-096d1fa4a8913ffd91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05fad8f46374f1a30",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096d1fa4a8913ffd9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_eip.nat_eip",
            "module.Network.aws_nat_gateway.nat_gateway",
            "module.Network.aws_route_table.private_route_table",
            "module.Network.aws_subnet.public_subnet1",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:route-table/rtb-096d1fa4a8913ffd9",
            "id": "rtb-096d1fa4a8913ffd9",
            "owner_id": "851725448170",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ede2837428dfe7b3",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05fad8f46374f1a30",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cgdubp_vpc_Private_Route_Table"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:route-table/rtb-00eedd6423ace42c4",
            "id": "rtb-00eedd6423ace42c4",
            "owner_id": "851725448170",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ede2837428dfe7b3",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ede2837428dfe7b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cgdubp_vpc_Public_Route_Table"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.internet_gateway",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1561268fe8e543",
            "route_table_id": "rtb-096d1fa4a8913ffd9",
            "subnet_id": "subnet-002c3431c8f6842e7"
          },
          "dependencies": [
            "module.Network.aws_route_table.private_route_table",
            "module.Network.aws_subnet.private_app_subnet1",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f6b1f7ffb0dfec4",
            "route_table_id": "rtb-00eedd6423ace42c4",
            "subnet_id": "subnet-03b628f1d53caa6dc"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.internet_gateway",
            "module.Network.aws_route_table.public_route_table",
            "module.Network.aws_subnet.public_subnet1",
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:security-group/sg-06ac0960b4343537e",
            "description": "Security group for GPU instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-06ac0960b4343537e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [
                  "2600:8806:a829:9300:ad16:4d10:9d79:d79c/128"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "cgdubp_vpc_App_SG",
            "name_prefix": "",
            "owner_id": "851725448170",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cgdubp_vpc_App_SG"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_App_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:subnet/subnet-002c3431c8f6842e7",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c3431c8f6842e7",
            "ipv6_cidr_block": "2600:1f18:64ab:ab01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b452abb5ad1409a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725448170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cgdubp_vpc_Private_Subnet1"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_Private_Subnet1"
            },
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:subnet/subnet-027785cdf7d12ea26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027785cdf7d12ea26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725448170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cgdubp_vpc-Private-Subnet2"
            },
            "tags_all": {
              "Name": "cgdubp_vpc-Private-Subnet2"
            },
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:subnet/subnet-03b628f1d53caa6dc",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b628f1d53caa6dc",
            "ipv6_cidr_block": "2600:1f18:64ab:ab00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0e114900a2bfbc4a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725448170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cgdubp_vpc_Public_Subnet1"
            },
            "tags_all": {
              "Name": "cgdubp_vpc_Public_Subnet1"
            },
            "vpc_id": "vpc-0a933a5f7722ae4a0"
          },
          "dependencies": [
            "module.Network.aws_vpc.cgdubp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cgdubp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725448170:vpc/vpc-0a933a5f7722ae4a0",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8cf0781ecd656f2",
            "default_route_table_id": "rtb-0f395cf1346d47378",
            "default_security_group_id": "sg-0e05442ab37138056",
            "dhcp_options_id": "dopt-0e53d6db38fc25340",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a933a5f7722ae4a0",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0c34027db887fc0dc",
            "ipv6_cidr_block": "2600:1f18:64ab:ab00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f395cf1346d47378",
            "owner_id": "851725448170",
            "tags": {
              "Name": "cgdubp_vpc"
            },
            "tags_all": {
              "Name": "cgdubp_vpc"
            }
          }
        }
      ]
    }
  ]
}